welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:10: error: value =- is not a member of Int
			y=-1;
                         ^